--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% block head %}
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="device-width, initial-scale=1, shrink-to-fit=no">
-        {% block styles %}
-        {{ bootstrap.load_css() }}
-    {super()}
     <head><script src="/docs/5.3/assets/js/color-modes.js"></script>
 
     <meta charset="utf-8">
@@ -36,6 +32,7 @@
 
 
     <style>
+    {% block styling %}
       .bd-placeholder-img {
         font-size: 1.125rem;
         text-anchor: middle;
@@ -107,14 +104,10 @@
       .bd-mode-toggle {
         z-index: 1500;
       }
+      {% endblock %}
     </style>
-
-
   </head>
-
-        {% endblock %}
     <title>{% block title %} {% endblock %}</title>
-    {% endblock %}
 </head>
 <body>
   {% block content %}
@@ -122,5 +115,7 @@
 
 
   {% endblock %}
+<script src="/docs/5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
