--- a/templates/login.html
+++ b/templates/login.html
@@ -1,13 +1,17 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
-</body>
-</html>
+
+{% block title %}Login{% endblock %}
+
+{% block content %}
+
+<div class="box">
+	<h1>Login</h1>
+    {% if not logged_in: %}
+      {{ wtf.quick_form(login_form) }}
+    {% endif %}
+
+</div>
+
+{% endblock %}
