--- a/templates/post.html
+++ b/templates/post.html
@@ -1,14 +1,10 @@
 {% extends 'base.html' %}
 {% import 'bootstrap/wtf.html' as wtf %}
 
-{% block head %}
-
 {% block title %}Post Ad{% endblock %}
-
-{% endblock %}
 
 {% block content %}
     <form class= 'form form-horizontal' method="POST" role="form">
-        {{ wtf.quick_form(form) }}
+        {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
     </form>
 {% endblock %}
