--- a/templates/register.html
+++ b/templates/register.html
@@ -9,6 +9,6 @@
 
 {% block content %}
     <form class= 'form form-horizontal' method="POST" role="form">
-        {{ wtf.quick_form(register_form) }}
+        {{ wtf.quick_form(register_form,novalidate=True, button_map={"submit": "primary"}) }}
     </form>
 {% endblock %}
