--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
                   <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                 </div>
-                <small class="text-body-secondary">9 mins</small>
+                <small class="text-body-secondary">Posted By {{ ad.author.name }}</small>
               </div>
             </div>
           </div>
