--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,10 @@
         <h1 class="fw-light">Adverts Nepal</h1>
         <p class="lead text-body-secondary"> Welcome to our buy and sell platform! Find great deals on a wide range of items or sell your unwanted goods. Join us today and start buying and selling with ease.</p>
         <p>
-          <a href="#" class="btn btn-primary my-2">Main call to action</a>
+          {% if current_user.is_authenticated: %}
+          <a href="{{ url_for('post_ad') }}" class="btn btn-primary my-2">Post-Ad</a>
           <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+          {% endif %}
         </p>
       </div>
     </div>
