--- a/templates/login.html
+++ b/templates/login.html
@@ -1,17 +1,33 @@
 {% extends 'base.html' %}
 {% import 'bootstrap/wtf.html' as wtf %}
-
+{% include 'header.html' %}
 
 {% block title %}Login{% endblock %}
 
 {% block content %}
 
-<div class="box">
-	<h1>Login</h1>
-    {% if not logged_in: %}
-      {{ wtf.quick_form(login_form) }}
-    {% endif %}
-
-</div>
+<body>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-4 col-md-6 col-sm-8">
+        <div class="card mt-5">
+          <div class="card-header text-center">
+            <h4>Login</h4>
+          </div>
+          <div class="card-body">
+            <form method="POST">
+              {{ form.csrf_token }}
+              {{ form.email.label }} {{ form.email(class="form-control") }}
+              {{ form.password.label }} {{ form.password(class="form-control") }}
+              <button type="submit" class="btn btn-primary btn-block">Login</button>
+            </form>
+          </div>
+          <div class="card-footer text-center">
+            Don't have an account? <a href="{{ url_for('register') }}">Sign up</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 {% endblock %}
