Login, Register and Post-ad UI Change

--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% import 'bootstrap/wtf.html' as wtf %}
-
+{% include 'header.html' %}
 
 {% block title %}Register User{% endblock %}
 
