Add price column to the Ad table, create footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="device-width, initial-scale=1, shrink-to-fit=no">
     <head><script src="/docs/5.3/assets/js/color-modes.js"></script>
@@ -28,6 +29,8 @@
 <link rel="manifest" href="/docs/5.3/assets/img/favicons/manifest.json">
 <link rel="mask-icon" href="/docs/5.3/assets/img/favicons/safari-pinned-tab.svg" color="#712cf9">
 <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon.ico">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-vB7J2FgK72F3L3v1zjvOgj0+V5G8Wb9fxxgRwQx11phdjUX/uIT9z7eZ31zq7ZU83a1yIULlTTi/ZXDAx2D2GA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 <meta name="theme-color" content="#712cf9">
 
 
@@ -104,6 +107,11 @@
       .bd-mode-toggle {
         z-index: 1500;
       }
+      .social-media-icon {
+      display: inline-block;
+      width: 45px;
+      height: 45px;
+      }
       {% endblock %}
     </style>
   </head>
@@ -117,5 +125,7 @@
   {% endblock %}
 <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+
+
 </body>
 </html>
