--- a/templates/post.html
+++ b/templates/post.html
@@ -17,6 +17,7 @@
               {{ form.csrf_token }}
               {{ form.ad_title.label }} {{ form.ad_title(class="form-control") }}
               {{ form.ad_description.label }} {{ form.ad_description(class="form-control") }}
+              {{ form.ad_price.label }} {{ form.ad_price(class="form-control") }}
               {{ form.image_url.label }} {{ form.image_url(class="form-control") }}
               <button type="submit" class="btn btn-primary btn-block">Post Ad</button>
             </form>
