--- a/templates/index.html
+++ b/templates/index.html
@@ -34,8 +34,8 @@
              <image href={{ ad.img_url }} width="100%" height="100%" preserveAspectRatio="xMidYMid slice" />
             </svg>
             <div class="card-body">
-              <h5 class="card-title">{{ ad.ad_title }}</h5>
-              <p class="card-text">{{ ad.description }}</p>
+              <h5 class="card-title">रु-/{{ ad.ad_price }}</h5>
+              <p class="card-text">{{ ad.ad_title }}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -57,14 +57,7 @@
 
 </main>
 
-<footer class="text-body-secondary py-5">
-  <div class="container">
-    <p class="float-end mb-1">
-      <a href="#">Back to top</a>
-    </p>
-    <p class="mb-1">Hey this is the landing page for the new web app where you could meet millions of other users want to sell their products online</p>
-    <p class="mb-0">Thank you for your time? <a href="/">Visit the homepage</a> visit link <a href="/docs/5.3/getting-started/introduction/">to get started</a>.</p>
-  </div>
-</footer>
+{% include 'footer.html' %}
+
 
 {% endblock %}
