--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
               <p class="card-text">{{ ad.ad_title }}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <button href="{{ url_for('view_ad', post_id=ad.id) }}" type="button" class="btn btn-sm btn-outline-secondary">View</button>
                   <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                 </div>
                 {% if current_user.id==1: %}
