Add price column to the Ad table, create footer

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,17 +5,17 @@
         <ul class="list-inline text-center">
           <li class="list-inline-item">
             <a href="https://www.instagram.com/your-instagram-link">
-              <img src="static/icons/insta-icon.png" alt="Instagram" class="social-media-icon social-media-icon-instagram">
+              <img src="/static/icons/insta-icon.png" alt="Instagram" class="social-media-icon social-media-icon-instagram">
             </a>
           </li>
           <li class="list-inline-item">
             <a href="https://www.facebook.com/your-facebook-link">
-              <img src="static/icons/fb-icon.png" alt="Facebook" class="social-media-icon social-media-icon-facebook">
+              <img src="/static/icons/fb-icon.png" alt="Facebook" class="social-media-icon social-media-icon-facebook">
             </a>
           </li>
           <li class="list-inline-item">
             <a href="https://www.twitter.com/your-twitter-link">
-              <img src="static/icons/twitter-icon.png" alt="Twitter" class="social-media-icon social-media-icon-twitter">
+              <img src="/static/icons/twitter-icon.png" alt="Twitter" class="social-media-icon social-media-icon-twitter">
             </a>
           </li>
         </ul>
