--- a/templates/index.html
+++ b/templates/index.html
@@ -38,13 +38,13 @@
               <p class="card-text">{{ ad.ad_title }}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button href="{{ url_for('view_ad', post_id=ad.id) }}" type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary" onclick="window.location.href='{{ url_for('view_ad', post_id=ad.id) }}'">View</button>
                   <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                 </div>
                 {% if current_user.id==1: %}
                 <a href="{{url_for('delete_post', post_id=ad.id) }}">✘</a>
                 {% endif %}
-                <small class="text-body-secondary">Posted by {{ ad.author.name }}</small>
+                <small class="text-body-secondary">Posted by {{ ad.author.name.split(" ")[0] }}</small>
               </div>
             </div>
           </div>
@@ -57,7 +57,6 @@
 
 </main>
 
-{% include 'footer.html' %}
 
 
 {% endblock %}
