--- a/templates/view_ad.html
+++ b/templates/view_ad.html
@@ -1,10 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>View ad</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% include 'header.html' %}
 
-</body>
-</html>
+{% block content %}
+
+<div class="container pt-4">
+    <div class="card">
+      <div class="row no-gutters">
+        <div class="col-md-4">
+          <img src="{{ad.img_url}}" class="card-img ad-image" alt="Ad Image">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">{{ ad.ad_title }}</h5>
+            <p class="card-text">{{ ad.description }}</p>
+            <h6 class="card-subtitle mb-2 text-muted">Price: रु-/{{ ad.ad_price }}</h6>
+            <a href="#" class="btn btn-primary">Contact Seller</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+{% endblock %}
+
