--- a/templates/base.html
+++ b/templates/base.html
@@ -112,6 +112,10 @@
       width: 45px;
       height: 45px;
       }
+      .flash-red {
+        color: red;
+      }
+
       {% endblock %}
     </style>
   </head>
