--- a/templates/register.html
+++ b/templates/register.html
@@ -15,6 +15,14 @@
           </div>
           <div class="card-body">
             <form method="POST">
+              {% with messages= get_flashed_messages() %}
+                {% if messages: %}
+                  {% for message in messages %}
+                    <p class="flashes flash-red"> {{message}} </p>
+                  {% endfor %}
+                {% endif %}
+              {% endwith %}
+
               {{ form.csrf_token }}
               {{ form.name.label }} {{ form.name(class="form-control") }}
               {{ form.email.label }} {{ form.email(class="form-control") }}
