--- a/templates/header.html
+++ b/templates/header.html
@@ -116,7 +116,7 @@
             <a class="nav-link" href="{{url_for('home')}}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="{{ url_for('about') }}">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
