--- a/templates/header.html
+++ b/templates/header.html
@@ -104,7 +104,7 @@
       {% if current_user.is_authenticated: %}
       <a class="navbar-brand" href="#">Welcome {{current_user.name.split(' ')[0]}}</a>
       {% else %}
-        <a class="navbar-brand" href="#">Please Login</a>
+        <a class="navbar-brand" href="#">Welcome</a>
 
       {% endif %}
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
