--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,9 @@
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary" onclick="window.location.href='{{ url_for('view_ad', post_id=ad.id) }}'">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  {% if current_user.is_authenticated %}
+                  <button type="button" class="btn btn-sm btn-outline-secondary" onclick="window.location.href='{{ url_for('edit_ad', post_id=ad.id, author_id=ad.author_id) }}'">Edit</button>
+                  {% endif %}
                 </div>
                 {% if current_user.id==1: %}
                 <a href="{{url_for('delete_post', post_id=ad.id) }}">✘</a>
