Add Comment Table, Relationship mapping between User, Ad and Comment Tables.

--- a/templates/view_ad.html
+++ b/templates/view_ad.html
@@ -15,6 +15,7 @@
             <p class="card-text">{{ ad.description }}</p>
             <h6 class="card-subtitle mb-2 text-muted">Price: रु-/{{ ad.ad_price }}</h6>
             <a href="#" class="btn btn-primary">Contact Seller</a>
+            <a href="#" class="btn btn-primary">Add a Comment</a>
           </div>
         </div>
       </div>
