--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% block stylesheets_link %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
     <meta charset="UTF-8">
@@ -31,6 +32,7 @@
 <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon.ico">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-vB7J2FgK72F3L3v1zjvOgj0+V5G8Wb9fxxgRwQx11phdjUX/uIT9z7eZ31zq7ZU83a1yIULlTTi/ZXDAx2D2GA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+{% endblock %}
 <meta name="theme-color" content="#712cf9">
 
 
@@ -115,6 +117,7 @@
       .flash-red {
         color: red;
       }
+
 
       {% endblock %}
     </style>
