--- a/templates/base.html
+++ b/templates/base.html
@@ -117,7 +117,10 @@
       .flash-red {
         color: red;
       }
-
+      .red-button {
+        background-color: red;
+        color: white;
+      }
 
       {% endblock %}
     </style>
@@ -133,6 +136,8 @@
 <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
-{% include 'footer.html' %}
 </body>
+{% block footer %}
+    {% include 'footer.html' %}
+{% endblock %}
 </html>
