--- a/templates/header.html
+++ b/templates/header.html
@@ -121,9 +121,11 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
           </li>
+            {% if current_user.is_authenticated: %}
           <li class="nav-item">
-            <a class="nav-link" href="#">Profile</a>
+            <a class="nav-link" href="{{ url_for('get_profile') }}">Profile</a>
           </li>
+            {% endif %}
             {% if current_user.is_authenticated: %}
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
