--- a/templates/index.html
+++ b/templates/index.html
@@ -1,64 +1,55 @@
 {% extends 'base.html' %}
 {% include 'header.html' %}
 
-{% block title %} Adverts Nepal {% endblock %}
-
+{% block title %}Adverts Nepal{% endblock %}
 
 {% block content %}
-
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light">Adverts Nepal</h1>
-        <p class="lead text-body-secondary"> Welcome to our buy and sell platform! Find great deals on a wide range of items or sell your unwanted goods. Join us today and start buying and selling with ease.</p>
+        <p class="lead text-body-secondary">Welcome to our buy and sell platform! Find great deals on a wide range of items or sell your unwanted goods. Join us today and start buying and selling with ease.</p>
         <p>
-          {% if current_user.is_authenticated: %}
-          <a href="{{ url_for('post_ad') }}" class="btn btn-primary my-2">Post-Ad</a>
-          <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+          {% if current_user.is_authenticated %}
+            <a href="{{ url_for('post_ad') }}" class="btn btn-primary my-2">Post-Ad</a>
+            <a href="{{ url_for('get_my_ads') }}" class="btn btn-secondary my-2">My Ads</a>
           {% endif %}
         </p>
       </div>
     </div>
   </section>
 
-<!--The below are the cards/ads.-->
-{% if all_ads %}
-
-  <div class="album py-5 bg-body-tertiary">
-    <div class="container">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-        {% for ad in all_ads %}
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice">
-             <image href={{ ad.img_url }} width="100%" height="100%" preserveAspectRatio="xMidYMid slice" />
-            </svg>
-            <div class="card-body">
-              <h5 class="card-title">रु-/{{ ad.ad_price }}</h5>
-              <p class="card-text">{{ ad.ad_title }}</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary" onclick="window.location.href='{{ url_for('view_ad', post_id=ad.id) }}'">View</button>
-                  {% if current_user.is_authenticated %}
-                  <button type="button" class="btn btn-sm btn-outline-secondary" onclick="window.location.href='{{ url_for('edit_ad', post_id=ad.id, author_id=ad.author_id) }}'">Edit</button>
-                  {% endif %}
+  <!--The below are the cards/ads.-->
+  {% if all_ads %}
+    <div class="album py-5 bg-body-tertiary">
+      <div class="container">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+          {% for ad in all_ads %}
+            <div class="col">
+              <div class="card shadow-sm">
+                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice">
+                  <image href="{{ ad.img_url }}" width="100%" height="100%" preserveAspectRatio="xMidYMid slice" />
+                </svg>
+                <div class="card-body">
+                  <h5 class="card-title">रु-/{{ ad.ad_price }}</h5>
+                  <p class="card-text">{{ ad.ad_title }}</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-sm btn-outline-secondary" onclick="window.location.href='{{ url_for('view_ad', post_id=ad.id) }}'">View</button>
+                      {% if current_user.is_authenticated %}
+                        {% if current_user.id == 1 %}
+                          <button type="button" class="btn red-button btn-sm btn-outline-secondary" onclick="window.location.href='{{ url_for('delete_post', post_id=ad.id) }}'">Delete</button>
+                        {% endif %}
+                      {% endif %}
+                    </div>
+                    <small class="text-body-secondary">Posted by {{ ad.author.name.split(" ")[0] }}</small>
+                  </div>
                 </div>
-                {% if current_user.id==1: %}
-                <a href="{{url_for('delete_post', post_id=ad.id) }}">✘</a>
-                {% endif %}
-                <small class="text-body-secondary">Posted by {{ ad.author.name.split(" ")[0] }}</small>
               </div>
             </div>
-          </div>
+          {% endfor %}
         </div>
-        {% endfor %}
       </div>
     </div>
-  </div>
-{% endif %}
-
-</main>
-
-
-
+  {% endif %}
 {% endblock %}
