--- a/templates/profile.html
+++ b/templates/profile.html
@@ -35,7 +35,7 @@
                 <button class="btn1 btn-dark" style="background:green;">Edit Profile</button>
             </div>
             <div class="text mt-3">
-                <span>{{ current_user.name }} is a popular user in our web app.<br><br> Artist/ Creative Director by Day #NFT minting@ with FND night. </span>
+                <span>{{ current_user.name }} is a popular user in our web app.<br><br>  </span>
             </div>
             <div class=" px-2 rounded mt-4 date ">
                 <span class="join">Joined May,2021</span>
