--- a/templates/view_ad.html
+++ b/templates/view_ad.html
@@ -12,7 +12,7 @@
   <div class="card">
     <div class="row no-gutters">
       <div class="col-md-4">
-        <img src="{{ ad.img_url }}" class="card-img ad-image img-fluid" alt="Ad Image">
+        <img src="{{ ad.img_url }}" class="card-img ad-image" alt="Ad Image">
       </div>
       <div class="col-md-8">
         <div class="card-body">
