--- a/templates/header.html
+++ b/templates/header.html
@@ -102,9 +102,9 @@
    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       {% if current_user.is_authenticated: %}
-      <a class="navbar-brand" href="#">Welcome {{current_user.name.split(' ')[0]}}</a>
+      <a class="navbar-brand" href="{{ url_for('home') }}">Welcome {{current_user.name.split(' ')[0]}}</a>
       {% else %}
-        <a class="navbar-brand" href="#">Welcome</a>
+        <a class="navbar-brand" href="{{ url_for('home') }}">Welcome</a>
 
       {% endif %}
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
